--- a/NovoStandNSpeedWay/Web/CoreResources/CoreResources.resx
+++ b/NovoStandNSpeedWay/Web/CoreResources/CoreResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ActivosController" xml:space="preserve">
+    <value>activos</value>
+  </data>
   <data name="FormaAdquisicionController" xml:space="preserve">
     <value>formaadquisicion</value>
   </data>
